Successfully registered two users and logged in those users

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
     </header><!-- /header -->
 
     <div class="container">
-      <div id="register">
+      <div>
         <h2>Register</h2>
-        <input type="email" placeholder="Your email">
-        <input type="password" placeholder="Your password">
-        <input type="password_confirmation" placeholder="Confirm password">
-        <input type="submit">
+        <form id="register">
+          <input name="email" type="text" placeholder="email">
+          <input name="password" type="password" placeholder="password">
+          <input name="password_confirmation" type="password" placeholder="password confirmation">
+          <input name="register" type="submit" value="Register">
+          </form>
       </div><!-- end register -->
 
       <div>
