Successfully created reg and login connection from frontend and backend
Separated out callbacks from click handlers for better SoC

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 <!-- begin scripts -->
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="assets/scripts/ssme_api.js" type="text/javascript" defer charset="utf-8"></script>
-  <script src="assets/scripts/ssme_app.js" type="text/javascript" defer charset="utf-8"></script>
+  <script src="assets/scripts/user_session.js" type="text/javascript" defer charset="utf-8"></script>
+    <script src="assets/scripts/ssme_app.js" type="text/javascript" defer charset="utf-8"></script>
 
   <!--
   <script src="assets/js/user_session.js" type="text/javascript" defer charset="utf-8"></script>
