--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <div class="bikes-for-sale">
         <h2>Bikes for sale</h2>
         <div class="bike-posts">
-
+          <ul id="bikes">
+          </ul>
+          <button id='bikes_button'>Get Bikes</button>
         </div>
       </div><!-- end bikes-for-sale -->
 
