Created ajax request to list the bikes posted the current_user

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       </div><!-- end login -->
 
       <div class="messages-container">
-        <h2 class="user-messages">messages here</h2>
+        <h3 class="user-messages">messages here</h3>
       </div><!-- end user-messages -->
 
 
       <div class="bikes-for-sale">
         <h2>Bikes for sale</h2>
-        <div class="bike-posts">
-          <ul id="bikes">
+        <div>
+          <ul id="all-bikes">
           </ul>
           <button id='bikes_button'>Get Bikes</button>
         </div>
@@ -67,7 +67,8 @@
       <div class="profile">
         <h2>[profile name]'s bike postings</h2>
         <div class="bike-posts">
-
+          <ul id="user-bikes">
+          </ul>
         </div>
         <div class="favorites">
 
@@ -82,7 +83,7 @@
             <input type="submit">
           </div>
         <div class="new-bike-posting">
-          <h3>your new posting</h3>
+          <h4>your new posting</h4>
           <div class="posting-display">
 
           </div>
