Still chasing the 'cannot post a new bike' bug

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div>
         <h2>Post a bike</h2>
         <div class="new-post-form">
-            <form id="create-bike"><input type="title" placeholder="title of your post">
+            <form id="bike"><input type="title" placeholder="title of your post">
                         <input type="description" placeholder="Posting description">
                         <input type="submit">
                         </form>
