Solved 'create new bike through frontend AJAX request' bug

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <div>
         <h2>Post a bike</h2>
         <div class="new-post-form">
-            <form id="bike"><input type="title" placeholder="title of your post">
-                        <input type="description" placeholder="Posting description">
+            <form id="bike"><input name="title" type="text" placeholder="title of your post">
+                        <input name="description" type="text" placeholder="Posting description">
                         <input type="submit">
                         </form>
            <!--  <button id='create_bike'>List a bike</button> -->
