testing in handlebars

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header><!-- /header -->
 
     <div class="container">
-      <div>
+      <div class="reg-login">
         <h2>Register</h2>
         <form id="register">
           <input name="email" type="text" placeholder="email">
@@ -42,7 +42,7 @@
           </form>
       </div><!-- end register -->
 
-      <div>
+      <div class="reg-login">
         <h2>Login</h2>
         <form id="login">
           <input name="email" type="text" placeholder="email">
@@ -67,7 +67,7 @@
         <h2>Your bikes for sale</h2>
         <div id="user-bikes">
         </div>
-        <div class="favorites">
+        <div id="user-favorites">
 
         </div>
       </div><!-- end profile -->
@@ -109,6 +109,7 @@
   <!-- end nav -->
 
 <!-- begin scripts -->
+
   <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="assets/scripts/ssme_api.js" type="text/javascript" defer charset="utf-8"></script>
   <script src="assets/scripts/ssme_button_callbacks.js" type="text/javascript" defer charset="utf-8"></script>
