--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <input name="password" type="password" placeholder="password">
           <input name="password_confirmation" type="password" placeholder="password confirmation">
           <input name="register" type="submit" value="Register">
-          </form>
+        </form>
       </div><!-- end register -->
 
       <div>
@@ -68,16 +68,42 @@
         <div id="user-bikes">
         </div>
         <div class="favorites">
-
+          <h2>Favorite a Bike</h2>
+          <form id="favorite_bike">
+            <input name="favorite" type="text" placeholder="true">
+            <input name="user_id" type="text" placeholder="user_id number">
+            <input name="bike_id" type="text" placeholder="bike_id number">
+            <input type="submit">
+          </form>
         </div>
       </div><!-- end profile -->
 
       <div>
         <h2>Post a bike</h2>
         <div class="new-post-form">
-            <form id="bike"><input name="title" type="text" placeholder="title of your post">
-                        <input name="description" type="text" placeholder="Posting description">
-                        <input type="submit">
+            <form id="bike">
+              <input name="title" type="text" placeholder="title of your post">
+              <input name="description" type="text" placeholder="Posting description">
+              <input type="submit">
+                        </form>
+           <!--  <button id='create_bike'>List a bike</button> -->
+          </div>
+        <div>
+          <h4>your new posting</h4>
+          <div id="new-bike" class="posting-display">
+
+          </div>
+
+        </div>
+      </div><!-- end post-bike -->
+
+       <div>
+        <h2>edit a bike</h2>
+        <div class="new-post-form">
+            <form id="bike">
+              <input name="title" type="text" placeholder="title of your post">
+              <input name="description" type="text" placeholder="Posting description">
+              <input type="submit">
                         </form>
            <!--  <button id='create_bike'>List a bike</button> -->
           </div>
