successfully made get request to show current_user favorite_bike on login

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             <input name="bike_id" type="text" placeholder="bike_id number">
             <input type="submit">
           </form>
+          <h2>Your favorite bikes</h2>
+          <div id="user-favorite-bikes">
+          </div>
         </div>
       </div><!-- end profile -->
 
@@ -85,7 +88,7 @@
               <input name="title" type="text" placeholder="title of your post">
               <input name="description" type="text" placeholder="Posting description">
               <input type="submit">
-                        </form>
+            </form>
            <!--  <button id='create_bike'>List a bike</button> -->
           </div>
         <div>
