started chasing 'bike create data not showing without browser refresh' issue

--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
 
     <header id="header" class="">
      <div class="brand">
-     <h1>SillySpeed Me</h1>
+       <h1>SillySpeed Me</h1>
        <img src="assets/images/ssme_logo.png" alt="SillySpeed Me logo">
-       <div class="profile-nav">
+       <!-- <div class="profile-nav">
          <h5>Welcome [user]</h5>
          <p>See your profile</p>
-       </div>
-      </div>
-      <nav>
+       </div> -->
+       <nav>
         <ul>
           <li><a href="#">list a bike</a></li>
           <li><a href="#">edit a listing</a></li>
         </ul>
       </nav>
+    </div>
+
 
     </header><!-- /header -->
 
     <div class="container">
-      <div>
+      <div class="reg-login">
         <h2>Register</h2>
         <form id="register">
           <input name="email" type="text" placeholder="email">
@@ -42,7 +43,7 @@
         </form>
       </div><!-- end register -->
 
-      <div>
+      <div class="reg-login">
         <h2>Login</h2>
         <form id="login">
           <input name="email" type="text" placeholder="email">
