polishing css/html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- all bikes -->
     <div class="main">
       <div class="bikes-for-sale">
-        <h4>Bikes for sale</h4>
+        <h4>All bikes for sale</h4>
 
         <div id="all-bikes">
           <!-- dynamic content -->
@@ -118,7 +118,7 @@
             <div>
               <h4>Favorite a Bike</h4>
                 <form id="favorite_bike">
-                  <input name="favorite" type="text" placeholder="true">
+                  <input name="favorite" type="text" placeholder="set to true">
                   <input name="user_id" type="text" placeholder="user_id number">
                   <input name="bike_id" type="text" placeholder="bike_id number">
                   <input type="submit">
@@ -129,7 +129,7 @@
               <h4>unFavorite a Bike</h4>
                <form id="update_favorite">
                  <input name="id" type="text" placeholder="favorite_bike id">
-                 <input name="favorite" type="text" placeholder="true">
+                 <input name="favorite" type="text" placeholder="set to false">
                  <input name="user_id" type="text" placeholder="user_id number">
                  <input name="bike_id" type="text" placeholder="bike_id number">
                  <input type="submit">
