Modified favorites list and user bikes layout. All bikes layout now on bottom.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
         <p>[<a class="register-a">Register</a> and <a class="login-a">Log in</a> to list a bike]</p>
       </section>
 
+      <!-- all bikes -->
+      <section class="bike-list-scheme span_12_of_12">
+        <div class="bikes-for-sale">
+          <h4>All bikes for sale</h4>
+
+          <div id="all-bikes" class="span_12_of_12">
+            <!-- dynamic content -->
+          </div>
+
+        </div><!-- end bikes-for-sale -->
+      </section>
+
 
 
       <section class="span_12_of_12 register-scheme hidden">
@@ -85,7 +97,7 @@
       <section id="profile" class="curr-user-scheme span_3_of_12">
 
         <div class="favorites">
-          <h4>Your favorite bikes</h4>
+          <h4>Your Favorites</h4>
 
           <div id="user-favorite-bikes">
           <!-- dynamic content -->
@@ -103,19 +115,6 @@
 
 
       </section><!-- end profile -->
-
-
-      <!-- all bikes -->
-      <section class="bike-list-scheme span_3_of_12">
-        <div class="bikes-for-sale">
-          <h4>All bikes for sale</h4>
-
-          <div id="all-bikes" class="span_12_of_12">
-            <!-- dynamic content -->
-          </div>
-
-        </div><!-- end bikes-for-sale -->
-      </section>
 
 
 
