color and layout mods to menus

--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
 
     <div class="brand">
       <h1>SillySpeed Me</h1>
-      <nav class="span_3_of_12">
-        <ul class="top-nav">
-          <li id ="register-button" class="top-nav-register">Register</li>
-          <li id="login-button" class="top-nav-login">Log In</li>
-          <li id="list-bike-button" class="list-a-bike">List a Bike</li>
-        </ul>
-      </nav>
     </div>
+
+    <!-- <nav> -->
+      <ul class="top-nav span_6_of_12">
+        <li id ="register-button" class="top-nav-register">Register</li>
+        <li id="login-button" class="top-nav-login">Log In</li>
+        <li id="list-bike-button" class="list-a-bike">List a Bike</li>
+      </ul>
+   <!--  </nav> -->
+
 
   </header>
   <!-- /header -->
+
   <!-- begin wrapper -->
   <div class="wrapper .flexbox-stretch-vertical">
 
@@ -35,7 +38,7 @@
       <section id="banner" class="span_12_of_12">
         <h2>SillySpeed Me!</h2>
         <h4>one-geared fun.</h4>
-        <p>[<a class="register-a">Register</a> and <a class="login-a">Log in</a> to list a bike]</p>
+        <p>&#8212; <a class="register-a">Register</a> and <a class="login-a">Log in</a> to list a bike &#8212; </p>
       </section>
 
       <!-- all bikes -->
