--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- <nav> -->
       <ul class="top-nav span_6_of_12">
-        <li id ="register-button" class="top-nav-register">Register</li>
-        <li id="login-button" class="top-nav-login">Log In</li>
+        <li id ="register-button" class="register-a">Register</li>
+        <li id="login-button" class="login-a">Log In</li>
         <li id="list-bike-button" class="list-a-bike">List a Bike</li>
       </ul>
    <!--  </nav> -->
@@ -31,7 +31,7 @@
   <!-- /header -->
 
   <!-- begin wrapper -->
-  <div class="wrapper .flexbox-stretch-vertical">
+  <div class="wrapper">
 
     <!-- begin container -->
 <!--     <div class="container"> -->
@@ -40,20 +40,6 @@
         <h4>one-geared fun.</h4>
         <p>&#8212; <a class="register-a">Register</a> and <a class="login-a">Log in</a> to list a bike &#8212; </p>
       </section>
-
-      <!-- all bikes -->
-      <section class="bike-list-scheme span_12_of_12">
-        <div class="bikes-for-sale">
-          <h4>All bikes for sale</h4>
-
-          <div id="all-bikes" class="span_12_of_12">
-            <!-- dynamic content -->
-          </div>
-
-        </div><!-- end bikes-for-sale -->
-      </section>
-
-
 
       <section class="span_12_of_12 register-scheme hidden">
         <div class="span_4_of_12 reg-login">
@@ -91,8 +77,9 @@
 
 
       <!-- user messages -->
-      <div class="messages-container">
-        <h4 class="user-messages">messages here</h4>
+      <div class="messages-container span_2_of_12 hidden">
+        <h5>Messages</h5>
+        <p class="user-messages flexbox-align-center span_12_of_12">messages here</p>
       </div>
 
 
@@ -120,6 +107,17 @@
       </section><!-- end profile -->
 
 
+      <!-- all bikes -->
+      <section class="bike-listings-scheme flexbox-stretch-vertical span_12_of_12">
+        <div class="bikes-for-sale">
+          <h4>All bikes for sale</h4>
+
+          <div id="all-bikes" class="span_12_of_12">
+            <!-- dynamic content -->
+          </div>
+
+        </div><!-- end bikes-for-sale -->
+      </section>
 
 
     <div class="secondary"><!-- current user -->
@@ -132,7 +130,7 @@
           <div class="favorite-menus left">
            <h4>Post a bike</h4>
             <div class="new-post-form">
-              <form id="bike">
+              <form id="create-bike">
                 <input name="title" type="text" placeholder="title of your post">
                 <input name="description" type="text" placeholder="Posting description">
                 <input type="submit">
