Successful favoriting and unfavoriting of bikes achieved

--- a/index.html
+++ b/index.html
@@ -74,13 +74,28 @@
 
       <!-- end login -->
 
+      <!-- begin list bike -->
+      <section class="span_12_of_12 list-bike-scheme hidden">
+        <div class="span_4_of_12 list-new-bike">
+          <p class="close-me"><i class="fa fa-times"></i></p>
+          <h3>List a bike</h3>
+          <form id="create-bike">
+            <input name="title" type="text" placeholder="title of your post">
+            <input name="description" type="text" placeholder="Posting description">
+            <!-- <input type="submit"> -->
+            <button type="" class="">Submit</button>
+          </form>
+        </div>
 
+      </section>
+      <!-- end list bike -->
 
       <!-- user messages -->
       <div class="messages-container span_2_of_12 hidden">
         <h5>Messages</h5>
         <p class="user-messages flexbox-align-center span_12_of_12">messages here</p>
       </div>
+      <!-- end user messages -->
 
 
 
@@ -128,14 +143,14 @@
 
 
           <div class="favorite-menus left">
-           <h4>Post a bike</h4>
+           <!-- <h4>Post a bike</h4>
             <div class="new-post-form">
               <form id="create-bike">
                 <input name="title" type="text" placeholder="title of your post">
                 <input name="description" type="text" placeholder="Posting description">
                 <input type="submit">
               </form>
-            </div>
+            </div> -->
 
             <div>
               <h4>Favorite a Bike</h4>
